<resources>
    <string name="app_name">Movart</string>
    <string name="frag_home">Home </string>
    <string name="frag_movies_name">Movies</string>
    <string name="frag_series_name">Series</string>
    <string name="frag_artists_name">Artists</string>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <!--Extras-->
    <string name="movie_youtube_id">movie_youtube_id</string>
    <string name="upcoming_movies_extra">upcoming_movies_extra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_list">Fragment List</string>
    <string name="fragment_back_stack">SelectedImageFragment</string>
    <string name="GridImagesFragmentBackStack">GridImagesFragment</string>
    <string name="some_error">Some Error Occurred</string>
    <string name="in_cinemas_label">In Cinemas</string>
    <string name="top_rated_movies_label">Top Rated Movies</string>
    <string name="coming_soon_label">Coming Soon</string>
    <string name="latest_label">Latest</string>
    <string name="series_top_rated_label">Top Rated</string>
    <string name="series_on_the_air_label">On The Air</string>
    <string name="series_airing_today_label">Airing Today</string>
    <string name="your_lists_label">Your Lists</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="ratings_label">Ratings</string>
    <string name="favourite_cinemas_label">Favourite Cinemas</string>
    <string name="recent_history_label">Recent History</string>
    <string name="your_lists_label_top">Your Lists</string>
    <string name="watchlist_label_top">Watchlist</string>
    <string name="rating_history_top_label">Rating History</string>
    <string name="profil_clear_history">CLEAR HISTORY</string>
    <string name="no_recent_history_text">You have no recent history</string>

    <string-array name="adapter_fragments_names">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>
        <item>Artists</item>
    </string-array>


</resources>
