<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greay_850">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/gray_800"
            android:elevation="10dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/gray_800"
                android:clipToPadding="false"
                android:padding="2dp"
                android:scrollbars="horizontal" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relLayout1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray_800"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/in_cinemas_label"
                android:textColor="@color/grey"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_one"
                android:background="@color/gray_800"
                android:clipToPadding="false"
                android:padding="2dp"
                android:scrollbars="horizontal" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayout3"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relLayout2"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray_800"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/top_rated_movies_label"
                android:textColor="@color/grey"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_tree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_two"
                android:background="@color/gray_800"
                android:clipToPadding="false"
                android:padding="2dp"
                android:scrollbars="horizontal" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayout4"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relLayout3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray_800"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tv_tree"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/coming_soon_label"
                android:textColor="@color/grey"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_tree"
                android:background="@color/gray_800"
                android:clipToPadding="false"
                android:padding="2dp"
                android:scrollbars="horizontal" />


        </RelativeLayout>


        <!--<RelativeLayout-->
            <!--android:id="@+id/relLayout5"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="325dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_below="@+id/relLayout4"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:background="@color/grey_800"-->
            <!--android:elevation="10dp">-->

            <!--<TextView-->
                <!--android:id="@+id/tv_four"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="25dp"-->
                <!--android:layout_marginStart="5dp"-->
                <!--android:padding="2dp"-->
                <!--android:text="@string/latest_label"-->
                <!--android:textColor="@color/grey"-->
                <!--android:textSize="15dp"-->
                <!--android:textStyle="bold|italic" />-->

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/recycler_view_five"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_below="@+id/tv_four"-->
                <!--android:background="@color/grey_800"-->
                <!--android:clipToPadding="false"-->
                <!--android:padding="2dp"-->
                <!--android:scrollbars="horizontal" />-->


        <!--</RelativeLayout>-->


    </RelativeLayout>


</merge>